# swagger/v1/swagger.yaml
@@ -4,13 +4,13 @@ info:
   title: API V1
   version: v1
 paths:
-  "/api/v1/Orders":
+  "/api/v1/orders":
     get:
-      summary: Retrieves Orders
-      description: Retrieves all the Orders
+      summary: Retrieves orders
+      description: Retrieves all the orders
       responses:
         '200':
-          description: Orders retrieved
+          description: orders retrieved
           content:
             application/json:
               schema:
@@ -31,13 +31,31 @@ paths:
                     total:
                       type: float
     post:
-      summary: Creates Order
-      description: Creates Order
+      summary: Creates order
+      description: Creates order
       parameters: []
       responses:
         '201':
           description: stote created
-  "/api/v1/Orders/{id}":
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                store_id:
+                  type: integer
+                product_ids:
+                  type: object
+                  properties:
+                    type: array
+                    items:
+                      type: integer
+                total:
+                  type: float
+  "/api/v1/orders/{id}":
     parameters:
     - name: id
       in: path
@@ -45,10 +63,10 @@ paths:
       schema:
         type: integer
     get:
-      summary: Show Order
+      summary: Show order
       responses:
         '200':
-          description: Order retrieved
+          description: order retrieved
           content:
             application/json:
               schema:
@@ -67,22 +85,22 @@ paths:
                   total:
                     type: float
         '404':
-          description: invalid Order id
+          description: invalid order id
     put:
-      summary: Updates Order
-      description: Updates Order
+      summary: Updates order
+      description: Updates order
       parameters: []
       responses:
         '200':
-          description: Order updated
+          description: order updated
     delete:
-      summary: Deletes Order
-      description: Deletes specific Order
+      summary: Deletes order
+      description: Deletes specific order
       responses:
         '204':
-          description: Order deleted
+          description: order deleted
         '404':
-          description: Order not found
+          description: order not found
   "/api/v1/products":
     get:
       summary: Retrieves Products
